// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders correctly when visible with default values 1`] = `
<div
  className="weave-banner weave-banner--info"
  href={null}
  onClick={null}
  style={Object {}}
  type={null}
  value={null}
>
  <p
    className="weave-banner__message"
    dangerouslySetInnerHTML={
      Object {
        "__html": null,
      }
    }
  />
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "cursor": "pointer",
      }
    }
  >
    <svg
      height="24"
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        close
      </title>
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 Z"
        fill="#000000"
      />
      <polygon
        fillOpacity="0"
        points="0 0 24 0 24 24 0 24"
      />
    </svg>
  </button>
</div>
`;

exports[`Banner renders correctly with content passed as a child 1`] = `
<div
  className="weave-banner weave-banner--info"
  href={null}
  onClick={null}
  style={Object {}}
  type={null}
  value={null}
>
  <p
    className="weave-banner__message"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Test content",
      }
    }
  />
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "cursor": "pointer",
      }
    }
  >
    <svg
      height="24"
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        close
      </title>
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 Z"
        fill="#000000"
      />
      <polygon
        fillOpacity="0"
        points="0 0 24 0 24 24 0 24"
      />
    </svg>
  </button>
</div>
`;

exports[`Banner renders correctly with content passed as a prop 1`] = `
<div
  className="weave-banner weave-banner--info"
  href={null}
  onClick={null}
  style={Object {}}
  type={null}
  value={null}
>
  <p
    className="weave-banner__message"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Here's some content!",
      }
    }
  />
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "border": "none",
        "cursor": "pointer",
      }
    }
  >
    <svg
      height="24"
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        close
      </title>
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 Z"
        fill="#000000"
      />
      <polygon
        fillOpacity="0"
        points="0 0 24 0 24 24 0 24"
      />
    </svg>
  </button>
</div>
`;
